Fixing scrollbar always shown

--- a/style/drngd.css
+++ b/style/drngd.css
@@ -1,6 +1,6 @@
 html { height: 100%; background: rgb(26,26,26); } /*Old browsers*/
 body {
-    min-height: 100%;
+    min-height: 200px;
     
     /*gradient*/
     background: -moz-linear-gradient(top,  rgba(0,0,0,1) 0%, rgba(26,26,26,1) 200px, rgba(26,26,26,1) 100%); /* FF3.6+ */
